--- a/H4_Group_12/app/src/main/res/values/strings.xml
+++ b/H4_Group_12/app/src/main/res/values/strings.xml
@@ -5,5 +5,5 @@
     <string name="action_settings">Settings</string>
     <string name="tempValue">--</string>
     <string name="windSpeed">bob</string>
-    <string name="subBtnText">New Button</string>
+    <string name="subBtnText">Subscribe</string>
 </resources>
