--- a/H4_Group_12/app/src/main/res/values/strings.xml
+++ b/H4_Group_12/app/src/main/res/values/strings.xml
@@ -1,9 +1,7 @@
 <resources>
     <string name="app_name">H4_Group_12</string>
-
-    <string name="hello_world">Hello world!</string>
-    <string name="action_settings">Settings</string>
+    <string name="action_settings">d</string>
     <string name="tempValue">--</string>
-    <string name="windSpeed">bob</string>
+    <string name="windSpeed">--</string>
     <string name="subBtnText">Subscribe</string>
 </resources>
