--- a/TeamProject/app/src/main/res/values/strings.xml
+++ b/TeamProject/app/src/main/res/values/strings.xml
@@ -3,4 +3,14 @@
 
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="artist">Artist</string>
+    <string name="map">Map</string>
+    <string name="info">Info</string>
+    <string name="calender">Calender</string>
+    <string name="northside">Northside 2016</string>
+    <string name="title_activity_artist">ArtistActivity</string>
+    <string name="title_activity_map">MapActivity</string>
+    <string name="title_activity_calender">CalenderActivity</string>
+    <string name="title_activity_info">InfoActivity</string>
+    <string name="home">Home</string>
 </resources>
