--- a/TeamProject/app/src/main/res/values/strings.xml
+++ b/TeamProject/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="title_activity_calender">CalenderActivity</string>
     <string name="title_activity_info">InfoActivity</string>
     <string name="home">Home</string>
+    <string name="btnUpdate">Update</string>
 </resources>
